fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ a {
     color: white;
 }
 
-html, body {margin: 0; height: 100%; overflow: hidden}
+
 
 a:link {
     text-decoration: none;
